@@ -11,9 +11,11 @@ import net.mat0u5.lifeseries.LifeSeries;
 import net.mat0u5.lifeseries.mixin.ChunkMapAccessor;
 import net.mat0u5.lifeseries.mixin.PlayerAccessor;
 import net.mat0u5.lifeseries.mixin.TrackedEntityAccessor;
+import net.mat0u5.lifeseries.seasons.subin.SubInManager;
+import net.mat0u5.lifeseries.utils.interfaces.IGameProfile;
 import net.mat0u5.lifeseries.utils.interfaces.IPlayer;
 import net.mat0u5.lifeseries.utils.other.OtherUtils;
-import net.mat0u5.lifeseries.utils.other.Tuple;
+import net.mat0u5.lifeseries.utils.other.Triple;
 import net.minecraft.network.protocol.game.*;
 import net.minecraft.server.level.ServerChunkCache;
 import net.minecraft.server.level.ServerLevel;
@@ -21,6 +23,7 @@ import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.players.PlayerList;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.biome.BiomeManager;
 
@@ -41,19 +44,19 @@ import net.minecraft.world.entity.PositionMoveRotation;
 
 public class ProfileManager {
 
-    private static final Map<UUID, Property> originalSkins = new HashMap<>();
-    private static final Map<UUID, String> originalNames = new HashMap<>();
-    public static final Map<UUID, String> manualSkins = new HashMap<>();
+    public static final Map<RealUUID, String> manualSkins = new HashMap<>();
 
     public static class ProfileChange {
         final ProfileChangeType type;
         final String info;
+        final UUID id;
         public ProfileChange(ProfileChangeType type) {
-            this(type, "");
+            this(type, "", null);
         }
-        public ProfileChange(ProfileChangeType type, String info) {
+        public ProfileChange(ProfileChangeType type, String info, UUID id) {
             this.type = type;
             this.info = info;
+            this.id = id;
         }
         public static ProfileChange none() {
             return new ProfileChange(ProfileChangeType.NONE);
@@ -65,7 +68,10 @@ public class ProfileManager {
             return new ProfileChange(ProfileChangeType.ORIGINAL);
         }
         public static ProfileChange set(String info) {
-            return new ProfileChange(ProfileChangeType.SET, info);
+            return new ProfileChange(ProfileChangeType.SET, info, null);
+        }
+        public static ProfileChange set(UUID id) {
+            return new ProfileChange(ProfileChangeType.SET, "", id);
         }
     }
     public enum ProfileChangeType {
@@ -75,39 +81,33 @@ public class ProfileManager {
         SET;
     }
 
-    public static CompletableFuture<Boolean> modifyProfile(ServerPlayer player, ProfileChange skinChange, ProfileChange usernameChange) {
+    public static CompletableFuture<Boolean> modifyProfile(ServerPlayer player, ProfileChange skinChange, ProfileChange usernameChange, ProfileChange uuidChange) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                if (!originalSkins.containsKey(player.getUUID())) {
-                    Property originalSkin = getSkinProperty(player.getGameProfile());
-                    originalSkins.put(player.getUUID(), originalSkin);
-                }
-                if (!originalNames.containsKey(player.getUUID())) {
-                    originalNames.put(player.getUUID(), player.getScoreboardName());
-                }
-
+                UUID previousUUID = player.getUUID();
                 Property targetSkin = null;
                 if (skinChange.type == ProfileChangeType.ORIGINAL) {
-                    targetSkin = originalSkins.get(player.getUUID());
+                    targetSkin = getRealSkin(player);
                 }
                 if (skinChange.type == ProfileChangeType.SET) {
                     targetSkin = fetchSkinFromUsername(skinChange.info);
                 }
 
-                Tuple<Boolean, Boolean> changed = setProfile(player, skinChange, usernameChange, targetSkin);
+                Triple<Boolean, Boolean, Boolean> changed = setProfile(player, skinChange, usernameChange, uuidChange, targetSkin);
                 boolean changedSkin = changed.x;
                 boolean changedName = changed.y;
+                boolean changedUUID = changed.z;
 
-                if (changedSkin || changedName) {
-                    refreshPlayerProfile(player);
-                    if (usernameChange.type != ProfileChangeType.NONE && changedName) {
+                if (changedSkin || changedName || changedUUID) {
+                    refreshPlayerProfile(player, previousUUID);
+                    if (changedName || changedUUID) {
                         currentSeason.onPlayerJoin(player);
                         currentSeason.usernameChanged(player);
                     }
                     LifeSkinsManager.refreshLifeSkin(player);
                 }
                 currentSeason.updateClientPlayerTeam(player);
-                return changedSkin || changedName;
+                return changedSkin || changedName || changedUUID;
 
             } catch (Exception e) {
                 e.printStackTrace();
@@ -116,17 +116,25 @@ public class ProfileManager {
         });
     }
 
-    private static Tuple<Boolean, Boolean> setProfile(ServerPlayer player, ProfileChange skinChange, ProfileChange usernameChange, Property targetSkin) {
+    private static Triple<Boolean, Boolean, Boolean> setProfile(ServerPlayer player, ProfileChange skinChange, ProfileChange usernameChange, ProfileChange uuidChange, Property targetSkin) {
+        GameProfile realProfile = getRealProfile(player);
         GameProfile currentProfile = player.getGameProfile();
 
         String name = OtherUtils.profileName(currentProfile);
+        UUID uuid = OtherUtils.profileId(currentProfile);
         if (usernameChange.type == ProfileChangeType.ORIGINAL) {
-            name = originalNames.get(player.getUUID());
+            name = getRealName(player);
         }
         if (usernameChange.type == ProfileChangeType.SET) {
             name = usernameChange.info;
         }
 
+        if (uuidChange.type == ProfileChangeType.ORIGINAL) {
+            uuid = getRealUUID(player).get();
+        }
+        if (uuidChange.type == ProfileChangeType.SET) {
+            uuid = uuidChange.id;
+        }
 
         //? if > 1.21.6 {
         Multimap<String, Property> properties;
@@ -146,14 +154,15 @@ public class ProfileManager {
         }
         //?}
 
-
         GameProfile newProfile = new GameProfile(
-                OtherUtils.profileId(currentProfile),
+                uuid,
                 name
                 //? if > 1.21.6 {
                 ,new PropertyMap(properties)
                 //?}
         );
+        setRealProfile(newProfile, realProfile);
+
         //? if <= 1.21.6 {
         /*if (skinChange.type != ProfileChangeType.NONE) {
             OtherUtils.profileProperties(currentProfile).forEach((key, property) -> {
@@ -170,10 +179,12 @@ public class ProfileManager {
         boolean changedName = usernameChange.type != ProfileChangeType.NONE && !Objects.equals(OtherUtils.profileName(currentProfile), OtherUtils.profileName(newProfile));
         Property originalSkin = getSkinProperty(player.getGameProfile());
         boolean changedSkin = skinChange.type != ProfileChangeType.NONE && !areEqualSkins(originalSkin, targetSkin);
-        if (changedName  || changedSkin) {
+        boolean changedUUID = uuidChange.type != ProfileChangeType.NONE && !Objects.equals(OtherUtils.profileId(currentProfile), OtherUtils.profileId(newProfile));
+        if (changedName  || changedSkin || changedUUID) {
             ((PlayerAccessor) player).ls$setGameProfile(newProfile);
+            player.setUUID(uuid);
         }
-        return new Tuple<>(changedSkin, changedName);
+        return new Triple<>(changedSkin, changedName, changedUUID);
     }
 
     private static Property getSkinProperty(GameProfile profile) {
@@ -227,11 +238,11 @@ public class ProfileManager {
         }
     }
 
-    private static void refreshPlayerProfile(ServerPlayer player) {
+    private static void refreshPlayerProfile(ServerPlayer player, UUID previousUUID) {
         ServerLevel level = ((IPlayer) player).ls$getServerLevel();
         PlayerList playerList = server.getPlayerList();
 
-        List<UUID> uuidList = Collections.singletonList(player.getUUID());
+        List<UUID> uuidList = List.of(previousUUID, player.getUUID());
         playerList.broadcastAll(new ClientboundPlayerInfoRemovePacket(uuidList));
         playerList.broadcastAll(ClientboundPlayerInfoUpdatePacket.createPlayerInitializing(Collections.singleton(player)));
 
@@ -255,10 +266,10 @@ public class ProfileManager {
         /*player.connection.send(new ClientboundRespawnPacket(
                         new CommonPlayerSpawnInfo(
                                 //? if <= 1.20.3 {
-                                level.dimensionTypeId(),
-                                //?} else {
-                                /^level.dimensionTypeRegistration(),
-                                ^///?}
+                                /^level.dimensionTypeId(),
+                                ^///?} else {
+                                level.dimensionTypeRegistration(),
+                                //?}
                                 level.dimension(),
                                 BiomeManager.obfuscateSeed(level.getSeed()),
                                 player.gameMode.getGameModeForPlayer(),
@@ -358,38 +369,78 @@ public class ProfileManager {
     }
 
     public static void onPlayerDisconnect(ServerPlayer player) {
-        resetPlayer(player).thenRun(() -> {
-            originalSkins.remove(player.getUUID());
-            originalNames.remove(player.getUUID());
-        });
+        resetPlayer(player);
     }
 
     public static CompletableFuture<Boolean> resetPlayer(ServerPlayer player) {
         if (player == null) return CompletableFuture.completedFuture(false);
-        if (hasChangedName(player) || hasChangedSkin(player)) {
-            return modifyProfile(player, ProfileChange.original(), ProfileChange.original());
+        if (hasChangedName(player) || hasChangedSkin(player) || hasChangedUUID(player)) {
+            return modifyProfile(player, ProfileChange.original(), ProfileChange.original(), ProfileChange.original());
         }
         return CompletableFuture.completedFuture(false);
     }
 
     public static boolean hasChangedName(ServerPlayer player) {
-        UUID uuid = player.getUUID();
-        if (originalNames.containsKey(uuid)) {
-            if (!player.getScoreboardName().equals(originalNames.get(uuid))) {
-                return true;
-            }
-        }
-        return false;
+        String realName = getRealName(player);
+        return !player.getScoreboardName().equals(realName);
+    }
+
+    public static boolean hasChangedUUID(ServerPlayer player) {
+        RealUUID realUUID = getRealUUID(player);
+        return !player.getUUID().equals(realUUID.get());
     }
 
     public static boolean hasChangedSkin(ServerPlayer player) {
-        UUID uuid = player.getUUID();
-        if (originalSkins.containsKey(uuid)) {
-            Property currentSkin = getSkinProperty(player.getGameProfile());
-            Property originalSkin = originalSkins.get(uuid);
-            return !areEqualSkins(currentSkin, originalSkin);
+        Property currentSkin = getSkinProperty(player.getGameProfile());
+        Property originalSkin = getRealSkin(player);
+        return !areEqualSkins(currentSkin, originalSkin);
+    }
+
+    public static GameProfile getRealProfile(Player player) {
+        GameProfile profile = player.getGameProfile();
+        if ((Object)profile instanceof IGameProfile accessor) {
+            return accessor.ls$getRealProfile();
         }
-        return false;
+        return player.getGameProfile();
+    }
+
+    public static RealUUID getRealUUID(Player player) {
+        return RealUUID.of(OtherUtils.profileId(getRealProfile(player)));
+    }
+
+    public static String getRealName(Player player) {
+        return OtherUtils.profileName(getRealProfile(player));
+    }
+
+    public static Property getRealSkin(Player player) {
+        return getSkinProperty(getRealProfile(player));
+    }
+
+    public static void setRealProfile(GameProfile profile, GameProfile realProfile) {
+        if ((Object)profile instanceof IGameProfile accessor) {
+            accessor.ls$setRealProfile(realProfile);
+        }
+    }
+
+    public static String getSkinName(ServerPlayer player) {
+        RealUUID realUUID = ProfileManager.getRealUUID(player);
+        if (ProfileManager.manualSkins.containsKey(realUUID)) {
+            return ProfileManager.manualSkins.get(realUUID);
+        }
+
+        String playerName = player.getScoreboardName();
+        if (SubInManager.isSubbingIn(player)) {
+            boolean changeSkin = SubInManager.CHANGE_SKIN;
+            boolean changeName = SubInManager.CHANGE_NAME;
+
+            if (changeSkin && !changeName) {
+                playerName = OtherUtils.profileName(SubInManager.getTargetPlayer(player));
+            }
+            if (!changeSkin && changeName) {
+                playerName = getRealName(player);
+            }
+        }
+        return playerName;
     }
 
     public static boolean areEqualSkins(Property skin1, Property skin2) {
